--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 0;
+    margin: 0;
 }
 .header {
     background-color: #1F2937;
