--- a/style.css
+++ b/style.css
@@ -13,14 +13,14 @@ body {
     align-items: center;
 }
 .header-logo {
-    margin-left: 8em;
+    margin-left: 140px;
     font-size: 24px;
     color: #F9FAF8;
 }
 .header-links {
     color: #E5E7EB;
     font-size: 18px;
-    margin-right: 8em;
+    margin-right: 140px;
 }
 a {
     text-decoration: none;
@@ -30,6 +30,49 @@ ul {
     list-style-type: none;
     display: flex;
     gap: 16px;
+}
+.body-part1 {
+    display: flex;
+    background-color: #1F2937;
+    justify-content: center;
+    align-items: center;
+}
+.container {
+    display: flex;
+    padding: 70px 140px;
+}
+.website-info {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    gap: 5px;
+    padding: 0;
+    margin: 0;
+}
+#website-title {
+    color: #F9FAF8;
+    font-weight: bolder;
+    font-size: 48px;
+    margin: 0;
+}
+#website-subtext {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin: 0;
+}
+.sign-up {
+    background-color: blue;
+    border-radius: 12px;
+    color: white;
+    max-width: fit-content;
+}
+.image {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    background-color: grey;
+    color: #E5E7EB;
 }
 .footer {
     display: flex;
