Fix button colour

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ ul {
     color: #ffffff;
     font-size: 12px;
     font-weight: bold;
-    background: #3498db;
+    background: #3882F6;
     padding: 10px 26px 10px 25px;
     max-width: fit-content;
     max-height: fit-content;
