--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     flex-direction: column;
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .header {
     background-color: #1F2937;
@@ -80,6 +81,30 @@ ul {
     align-items: center;
     background-color: grey;
     color: #E5E7EB;
+}
+.body-part2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.random-info {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    padding: 40px;
+}
+.illustrations {
+    display: flex;
+}
+.blue-boxes {
+    border: #3882F6;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 20px;
+}
+.illustration {
+    display: flex;
+    flex-direction: column;
 }
 .footer {
     display: flex;
