--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ ul {
 }
 .container {
     display: flex;
-    padding: 70px 140px;
+    padding: 70px 140px 95px;
 }
 .website-info {
     display: flex;
