Create subtext font and apply relevantly
Many different classes were using the same subtext font so I decided to
make one class with all the font attributes and apply it to the classes

--- a/style.css
+++ b/style.css
@@ -19,8 +19,6 @@ body {
     color: #F9FAF8;
 }
 .header-links {
-    color: #E5E7EB;
-    font-size: 18px;
     margin-right: 140px;
 }
 a {
@@ -56,7 +54,7 @@ ul {
     font-size: 48px;
     margin: 0;
 }
-#website-subtext {
+#subtext {
     font-size: 18px;
     color: #E5E7EB;
     margin: 0;
