--- a/style.css
+++ b/style.css
@@ -133,7 +133,8 @@ ul {
     margin-right: auto;
 }
 .quoted {
-    font-size: 28px;
+    font-size: 22px;
+    font-weight: bold;
     color: #1F2937;
     margin-left: auto;
 } 
